--- a/index.html
+++ b/index.html
@@ -30,11 +30,59 @@
 
         const contractAddress = "0x773064EA842539Bd9549FFF2fC2AFce1076CA6B5";  // Replace this after deployment
         const abi = [
-            { "inputs": [{ "internalType": "string", "name": "newOutput", "type": "string" }], "name": "Set_Word", "outputs": [], "stateMutability": "nonpayable", "type": "function" },
-            { "inputs": [{ "internalType": "int256", "name": "newNumber", "type": "int256" }], "name": "Set_Number", "outputs": [], "stateMutability": "nonpayable", "type": "function" },
-            { "inputs": [], "name": "output", "outputs": [{ "internalType": "string", "name": "", "type": "string" }], "stateMutability": "view", "type": "function" },
-            { "inputs": [], "name": "number", "outputs": [{ "internalType": "int256", "name": "", "type": "int256" }], "stateMutability": "view", "type": "function" }
-        ];
+	{
+		"inputs": [
+			{
+				"internalType": "int256",
+				"name": "newNumber",
+				"type": "int256"
+			}
+		],
+		"name": "Set_Number",
+		"outputs": [],
+		"stateMutability": "nonpayable",
+		"type": "function"
+	},
+	{
+		"inputs": [
+			{
+				"internalType": "string",
+				"name": "newOutput",
+				"type": "string"
+			}
+		],
+		"name": "Set_Word",
+		"outputs": [],
+		"stateMutability": "nonpayable",
+		"type": "function"
+	},
+	{
+		"inputs": [],
+		"name": "number",
+		"outputs": [
+			{
+				"internalType": "int256",
+				"name": "",
+				"type": "int256"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	},
+	{
+		"inputs": [],
+		"name": "output",
+		"outputs": [
+			{
+				"internalType": "string",
+				"name": "",
+				"type": "string"
+			}
+		],
+		"stateMutability": "view",
+		"type": "function"
+	}
+];
 
         async function connectWallet() {
             if (window.ethereum) {
